# python-types

./: basic_homework.py  homework_advanced.py  justfile  main.py  pyproject.toml
