[tool.poetry]
name = "python-types"
version = "0.1.0"
description = ""
authors = ["Avi Agarwal <aviagarwal1212@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_types" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
